.config/matugen/templates/discord.css
/* ... */
.panels__5e434 /* user panel */ {
    bottom: 0;
    left: 0;
    width: 100%;
}

.sidebar__5e434 /* server list + channel list + user panel group */ {
    margin: 0 var(--gap) 0 var(--gap);
}

.guilds__5e434 /* server list */ {
    margin-bottom: calc(var(--custom-app-panels-height, 0) + var(--gap));
    margin-right: var(--gap);
}
.guilds__5e434 + div:not(.sidebarList__5e434) /* betterfolders */ {
    width: 100% !important;
}
.scroller_ef3116 /* server list inner scroller */ {
    padding-top: var(--custom-guild-list-padding) !important;
    padding-bottom: var(--custom-guild-list-padding);
}
.folderGroup__48112 {
    width: 100%;
}
.listItem__650eb {
    width: 100%;
}

.sidebarList__5e434 /* channel list */ {
    margin-bottom: calc(var(--custom-app-panels-height, 0) + var(--gap) + var(--gap));
}
.container__2637a /* channel list inner */ {
    padding-bottom: 0;
}
.clickable_f37cb1,
.container__2637a /* channel list inner */,
.header_f37cb1 /* server name */ {
    background: none;
}
.scroller__629e4 /* channel list inner scroller */ {
    margin-bottom: 0;
}

/* fix discord's idiotic server banners */
.bannerImage_f37cb1,
.bannerImg_f37cb1 {
    width: 100%;
}
.bannerVisible_f37cb1 .headerEllipseBackdrop_f37cb1 {
    display: none;
}
.headerGlass_f37cb1 {
    top: 0;
    left: 0;
    right: 0;
    width: auto;
    border-radius: var(--radius-lg) var(--radius-lg) 0 0;
}

.sidebar__5e434:after /* server list + channel list bottom shadow */ {
    display: none;
}

.wrapper_ef3116 /* remove server list shadow */ {
    mask: none;
}

.chat_f75fb0 /* chat group outer */ {
    border: none !important;
    background: none;
}
.chatContent_f75fb0 {
    overflow: hidden;
}
.container__133bf /* friends page group outer */,
.page__5e434 {
    padding-bottom: 0;
    padding-right: var(--gap);
    border: none !important;
    background: none;
}
.page__5e434 > .chat_f75fb0,
.page__5e434 > .container__133bf {
    padding: 0;
}

.container__9293f /* friends, message requests, + other stuff titlebar */ {
    margin-bottom: var(--gap);
}

.subtitleContainer_f75fb0 /* chat titlebar  */ {
    margin-bottom: var(--gap);
}
.title_f75fb0 /* chat titlebar inner */ {
    border: none;
    background: none !important;
    margin-bottom: 0;
}

.page__5e434 > div > .chat_f75fb0 > .content_f75fb0 /* chat outer */ {
    border-left: none;
}
.tabBody__133bf /* friends page */ {
    border: none !important;
}

.listeningAlong_e0cf27 /* user panel listening along */ {
    border-top: none !important;
}

.container_c8ffbb /* member list */ {
    margin-left: var(--gap);
    overflow: hidden;
    height: auto;
    min-width: fit-content;
}
.content_f75fb0 > .membersWrap_c8ffbb /* forum post member list */ {
    margin-left: var(--gap);
    overflow: hidden;
    height: auto;
    min-width: fit-content;
}
.members_c8ffbb /* member list inner */,
.member_c8ffbb /* member list item */ {
    background: none;
}

.resizeHandle__01ae2 /* resize handle */ {
    background: transparent;
}

.privateChannels_e6b769 /* dm list */,
.scroller__99e7c /* dm list inner */ {
    background: none;
}
.scroller__99e7c /* dm list inner */ {
    margin-bottom: 0;
}

.tabBody__133bf /* online friends + active now group outer */ {
    background: none;
}

.nowPlayingColumn__133bf /* active now */ {
    margin-left: var(--gap);
}
.container__7d20c /* active now inner */ {
    background: none;
}
.scroller__7d20c /* active now inner */ {
    border: none;
}

.homeWrapper__0920e /* nitro page group inner */ {
    border: none;
    background: none;
}
.applicationStore_f07d62 /* nitro page group outer */ {
    background: none;
}

.shop__6db1d /* shop */ {
    overflow: hidden;
    height: auto;
}
.shop__08415 /* shop inner scroller */ {
    margin-top: calc(var(--custom-channel-header-height) * -1 - 16px);
}

.container__955a3 /* quests outer */ {
    border: none;
}

.content_f75fb0 > aside > .outer_c0bea0 /* dm user panel */ {
    margin-left: var(--gap);
    overflow: hidden;
    /* min-width: 340px; */
    background-position: center calc(-1 * var(--border-thickness));
    background-size: 100% calc(100% + 2 * var(--border-thickness));
}

.searchResultsWrap_a98f3b /* search results */ {
    margin-left: var(--gap);
}

.notice__6e2b9 /* notice banner */ {
    margin: 0 var(--gap) var(--gap) 0;
    border-radius: var(--radius-md);
    box-sizing: border-box;
    height: 40px;
}

.container__01ae2 /* vc chat + titlebar group */ {
    border: none;
    background: none;
}
.chat_a44415::before /* vc chat shadow */ {
    display: none;
}
.channelChatWrapper_cb9592 /* vc chat + titlebar group outer */ {
    background: none;
}

.page__5e434 > div > .chatLayerWrapper__01ae2 /* forum/thread chat outer */ {
    margin: 0 var(--gap) var(--gap) 0;
    height: calc(100% - var(--gap));
}
.container__01ae2 /* forum/thread chat */ {
    padding-left: calc((var(--gap) - var(--chat-resize-handle-width)));
}

.container_fb64c9 /* new thread panel */ {
    background: none;
}
.chat_fb64c9::before /* new thread panel chat shadow */ {
    display: none;
}

.container_a592e1 /* server discovery */ {
    overflow: hidden;
}
.backdrop__8a7fc /* server discovery top bar */ {
    background-color: var(--background-base-lower);
}

.wrapper_cb9592 /* dm vc wrapper */ {
    background: none;
    margin-bottom: var(--gap);
}
.wrapper_cb9592.fullScreen_cb9592 {
    margin-top: var(--gap);
    margin-left: var(--gap);
    width: calc(100% - var(--gap));
    height: calc(100% - var(--gap));
}

/* remove excess background from settings  */
.standardSidebarView__23e6b,
.contentRegion__23e6b,
.sidebarRegionScroller__23e6b,
.contentRegionScroller__23e6b {
    background: none;
}
.standardSidebarView__23e6b {
    backdrop-filter: var(--panel-backdrop-filter);
}

/* remove excess backgrounds */
.wrapper__4e6ce /* message loading placeholders */,
.wrapper__4e6ce > .wrapper_fc8177 {
    background: none;
}
/* ... */

